--- a/mia/Base.lproj/Main.storyboard
+++ b/mia/Base.lproj/Main.storyboard
@@ -59,11 +59,11 @@
             </objects>
             <point key="canvasLocation" x="446" y="-552"/>
         </scene>
-        <!--收藏-->
+        <!--Delegate-->
         <scene sceneID="XR7-mw-hKc">
             <objects>
                 <tableViewController storyboardIdentifier="HXFavoriteViewController" id="60l-rO-5xV" customClass="HXFavoriteViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="123" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jyv-8M-MIA">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jyv-8M-MIA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
@@ -73,6 +73,9 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <animations/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <outlet property="delegate" destination="60l-rO-5xV" id="pTe-mH-p8D"/>
+                            </connections>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="g4V-oD-18C">
                             <rect key="frame" x="0.0" y="232" width="320" height="1"/>
@@ -94,14 +97,6 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="aqo-Z3-KpL" secondAttribute="height" multiplier="1:1" id="IlI-OV-PLr"/>
                                                 <constraint firstAttribute="width" constant="44" id="UjN-rV-sog"/>
-                                            </constraints>
-                                        </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="F-ShareIcon" translatesAutoresizingMaskIntoConstraints="NO" id="DhR-kt-EkE" userLabel="分享按钮">
-                                            <rect key="frame" x="282" y="25" width="30" height="30"/>
-                                            <animations/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="DhR-kt-EkE" secondAttribute="height" multiplier="1:1" id="G7f-So-CPM"/>
-                                                <constraint firstAttribute="width" constant="30" id="eeC-ga-Ukl"/>
                                             </constraints>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="F-DwonloadIcon" translatesAutoresizingMaskIntoConstraints="NO" id="D4R-2R-4Yj" userLabel="下载标识">
@@ -126,24 +121,40 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mS9-v1-ggD">
+                                            <rect key="frame" x="282" y="25" width="30" height="30"/>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="QCR-B3-233"/>
+                                                <constraint firstAttribute="width" secondItem="mS9-v1-ggD" secondAttribute="height" multiplier="1:1" id="fM3-CH-m9p"/>
+                                            </constraints>
+                                            <state key="normal" image="F-ShareIcon"/>
+                                        </button>
                                     </subviews>
                                     <animations/>
                                     <constraints>
-                                        <constraint firstItem="DhR-kt-EkE" firstAttribute="centerY" secondItem="9Od-oW-A6R" secondAttribute="centerY" id="0TE-7c-pkR"/>
-                                        <constraint firstAttribute="trailing" secondItem="DhR-kt-EkE" secondAttribute="trailing" constant="8" id="1uz-lr-cRG"/>
                                         <constraint firstItem="aqo-Z3-KpL" firstAttribute="leading" secondItem="9Od-oW-A6R" secondAttribute="leading" constant="20" id="2K1-Z0-AeC"/>
                                         <constraint firstItem="cKy-sN-Z38" firstAttribute="trailing" secondItem="oiX-WW-dRl" secondAttribute="trailing" id="3H1-df-3MA"/>
                                         <constraint firstItem="D4R-2R-4Yj" firstAttribute="leading" secondItem="oiX-WW-dRl" secondAttribute="leading" id="46s-cm-zTR"/>
                                         <constraint firstItem="aqo-Z3-KpL" firstAttribute="centerY" secondItem="9Od-oW-A6R" secondAttribute="centerY" id="6Wc-9u-aso"/>
-                                        <constraint firstItem="DhR-kt-EkE" firstAttribute="leading" secondItem="oiX-WW-dRl" secondAttribute="trailing" constant="8" id="HRF-Yv-bsH"/>
+                                        <constraint firstItem="mS9-v1-ggD" firstAttribute="leading" secondItem="oiX-WW-dRl" secondAttribute="trailing" constant="8" id="Er7-BF-Kbz"/>
+                                        <constraint firstAttribute="trailing" secondItem="mS9-v1-ggD" secondAttribute="trailing" constant="8" id="G1Q-NU-doN"/>
                                         <constraint firstItem="cKy-sN-Z38" firstAttribute="centerY" secondItem="D4R-2R-4Yj" secondAttribute="centerY" id="K5a-Wa-mmb"/>
                                         <constraint firstItem="oiX-WW-dRl" firstAttribute="leading" secondItem="aqo-Z3-KpL" secondAttribute="trailing" constant="8" id="P7C-bs-aWi"/>
                                         <constraint firstItem="cKy-sN-Z38" firstAttribute="leading" secondItem="D4R-2R-4Yj" secondAttribute="trailing" constant="4" id="UHQ-95-YCB"/>
+                                        <constraint firstItem="mS9-v1-ggD" firstAttribute="leading" secondItem="cKy-sN-Z38" secondAttribute="trailing" constant="8" id="fNW-l9-JdK"/>
                                         <constraint firstItem="D4R-2R-4Yj" firstAttribute="top" secondItem="oiX-WW-dRl" secondAttribute="bottom" constant="4" id="hMv-tx-LV7"/>
                                         <constraint firstItem="oiX-WW-dRl" firstAttribute="bottom" secondItem="aqo-Z3-KpL" secondAttribute="centerY" constant="-4" id="ndA-k8-82v"/>
+                                        <constraint firstItem="mS9-v1-ggD" firstAttribute="centerY" secondItem="9Od-oW-A6R" secondAttribute="centerY" id="w7q-8J-JAM"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <animations/>
+                                <connections>
+                                    <outlet property="downloadStateIcon" destination="D4R-2R-4Yj" id="QB4-Hg-81j"/>
+                                    <outlet property="frontCover" destination="aqo-Z3-KpL" id="mw4-ah-V2e"/>
+                                    <outlet property="singerLabel" destination="cKy-sN-Z38" id="gOe-hV-oYC"/>
+                                    <outlet property="songNameLabel" destination="oiX-WW-dRl" id="M5d-iA-F2D"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
